energyPlan apis with json files